--- a/backend/web/css/bootstrap.css
+++ b/backend/web/css/bootstrap.css
@@ -2990,6 +2990,7 @@ select[multiple].form-group-lg .form-control {
   display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
+  margin-left: 6px;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.42857143;
