--- a/backend/web/css/index-style.css
+++ b/backend/web/css/index-style.css
@@ -1,68 +1,62 @@
 .content-wrapper{
-    background: url(http://3.bp.blogspot.com/-nqaPEylE51g/T7JT2TiRZnI/AAAAAAAABYY/AMHMAhN6-c0/s1600/drawing+bank+of+china+tower+3.jpg) no-repeat right bottom / 265px 660px,
-				url(https://www.ledr.com/colours/white.jpg) no-repeat center / 1800px 1265px;
+    background: url(http://localhost/sgpoc/backend/web/img/index-arq1.jpg) no-repeat left bottom/ 265px 660px,
+				url(http://localhost/sgpoc/backend/web/img/index-arq2.jpg) no-repeat right / 500px 500px,
+				url(http://localhost/sgpoc/backend/web/img/white-bg.png) no-repeat center / 1920px 1280px;
 	position:relative;	
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
+.index-content .app-logo {
+	height: 150px;
+	width: 150px;
+	margin-left: 125px;
+	margin-right: 150px;
+	margin-bottom: 25px;
+}
 
-.header h1 , .content h2{
+.index-content h1 , .index-content h2{
 	font-family: "Courier New", Monospace;
     color: #000;
 	text-align: left;
 }
 
-.header h1{
+.index-content h1{
     font-size: 85px;
+	margin-left: 85px;
+	margin-right: 150px;
 }
 
-.content h2{
+.index-content h2{
     font-size: 50px;
 }
 
-.p {
-	text-align:center;
-}
-
-.fau-logo{
+.footer .fau-logo {
 	height: 100px;
 	width: 100px;
-	position: absolute;
-	bottom: 50px;
-	left: 99px;
-}
-
-.app-logo{
-	height: 120px;
-	width: 120px;
-	position: absolute;
-	top: 100px;
-	left: 600px;
+	margin-left: 150px;
+	margin-right: 150px;
+	margin-top: 25px;
 }
 
 
-.boton{
-	position: relative;
-	left: 100px;
-	margin-top: 50px;
-	background-color: white; 
-    color: black; 
-    border: 2px solid #000;
-	border-radius: 50%;
-    padding: 6px 15px;
-    text-align: center;
-    display: inline;
-	font-family: "Courier New", Monospace;
-    font-size: 16px;
-    cursor: pointer;
-}
+@media (max-width: 670px) {
+   .content-wrapper{
+		background: url(http://localhost/sgpoc/backend/web/img/white-bg.png) no-repeat center / 1920px 1280px;
+	}
+	
+	.index-content h1{
+		font-size: 50px;
+		text-align:center;
+	}
 
-.boton:hover{
-	background-color: #E5EBE5;
-}
+	.index-content h2{
+		font-size: 30px;
+		text-align:center;
+	}
 
-.contacto{
-	font-family: "Courier New", Monospace;
-    color: #000;
-	margin-top: 50px;
+	.index-content .desc {
+		display: none;
+	}
 }
-
